unpackaged/main/default/objects/Referral__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the partner account</description>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Partner Account)</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>