unpackaged/main/default/objects/Referral__c/fields/Partner_Software_Non_Compete_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Software_Non_Compete_Type__c</fullName>
    <description>The type of non-compete we have with this partner regarding software sales</description>
    <formula>TEXT(Partnership__r.Partner_Account__r.Partner_Software_Non_Compete_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Software Non-Compete Type</label>
    <type>Text</type>
</CustomField>