unpackaged/main/default/objects/Referral__c/fields/Partnership_Brand_Priority__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Brand_Priority__c</fullName>
    <formula>CASE(  Partnership_Brand_s__c ,
&quot;All&quot;,1,
&quot;All Payment&quot;, 2,
&quot;All Software&quot;, 2,
4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used by automation to determine which referral to examine first when aligning opportunities to existing partnership referrals</inlineHelpText>
    <label>Partnership Brand Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>