unpackaged/main/default/objects/Referral__c/fields/Partnership_Brand_s__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Brand_s__c</fullName>
    <formula>TEXT( Partnership__r.Brand__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays which brand(s) the linked partnership is defined with.</inlineHelpText>
    <label>Partnership Brand(s)</label>
    <type>Text</type>
</CustomField>