unpackaged/main/default/objects/Referral__c/fields/Partnership_Level__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Level__c</fullName>
    <formula>TEXT(Partnership__r.Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populated via Partnership record</inlineHelpText>
    <label>Partnership Level</label>
    <type>Text</type>
</CustomField>