unpackaged/main/default/objects/Referral__c/fields/Partnership_Name__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Name__c</fullName>
    <formula>Partnership__r.Partner_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the name of the partner; not the legal name or DBA name.</inlineHelpText>
    <label>Partnership Name</label>
    <type>Text</type>
</CustomField>