unpackaged/main/default/objects/Referral__c/fields/Partnership_Status__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Status__c</fullName>
    <formula>TEXT(Partnership__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflect the Partnership Status, and not the Status between the customer Account and the Partnership</inlineHelpText>
    <label>Partnership Status</label>
    <type>Text</type>
</CustomField>