unpackaged/main/default/objects/Referral__c/fields/Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type__c</fullName>
    <formula>Partnership__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the partnership type of the associated partner</inlineHelpText>
    <label>Partnership Type</label>
    <type>Text</type>
</CustomField>