unpackaged/main/default/objects/Referral__c/fields/Payments_Enterprise_Account2__c.field-meta.xml
<CustomField>
    <fullName>Payments_Enterprise_Account2__c</fullName>
    <formula>TEXT(Partnership__r.Partner_Account__r.Payments_Enterprise_Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments Enterprise Account</label>
    <type>Text</type>
</CustomField>