unpackaged/main/default/objects/Referral__c/fields/Payments_Enterprise_Account__c.field-meta.xml
<CustomField>
    <fullName>Payments_Enterprise_Account__c</fullName>
    <label>Payments Enterprise Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>