unpackaged/main/default/objects/Referral__c/fields/Primary_Referral_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Primary_Referral_Partnership__c</fullName>
    <label>Primary Referral Partnership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>Demoted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>