unpackaged/main/default/objects/Referral__c/fields/Referral_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_End_Date__c</fullName>
    <inlineHelpText>Reflects the date that the referral partnership was terminated between the firm and the partnership</inlineHelpText>
    <label>Referral End Date</label>
    <type>Date</type>
</CustomField>