unpackaged/main/default/objects/Referral__c/fields/Referral_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Referral_ID_Case_Safe__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral ID (Case Safe)</label>
    <type>Text</type>
</CustomField>