unpackaged/main/default/objects/Referral__c/fields/Referral_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Start_Date__c</fullName>
    <inlineHelpText>Reflects when the firm became a customer through a referral</inlineHelpText>
    <label>Referral Start Date</label>
    <type>Date</type>
</CustomField>