unpackaged/main/default/objects/Referral__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Defunct Low Activity</fullName>
                <isActive>false</isActive>
                <label>Defunct Low Activity</label>
            </value>
            <value>
                <fullName>Prelaunch</fullName>
                <isActive>false</isActive>
                <label>Prelaunch</label>
            </value>
            <value>
                <fullName>Terminated</fullName>
                <isActive>false</isActive>
                <label>Terminated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>