unpackaged/main/default/objects/Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Partnership__c</columns>
    <columns>Partnership_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Melissa</value>
    </filters>
    <label>All</label>
</ListView>